--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,13 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About
+      - href: Resume.qmd
+        text: Resume
+      - href: Projects.qmd
+        text: Projects
+  
 
 format:
   html:
