--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,9 @@ website:
         text: Resume
       - href: Projects.qmd
         text: Projects
+     right:
+      - href: https://github.com/BaileyStender
+        text: GitHub
   
 
 format:
