--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs 
 
 website:
-  title: "BaileyStender.github.io"
+  title: "Bailey Stender Personal Portfolio"
   navbar:
     left:
       - href: index.qmd
@@ -19,9 +19,12 @@ website:
 
 format:
   html:
-    theme: styles.scss
-    mainfont: Nunito
+    theme: 
+      - sandstone
+      - styles.scss
     toc: true
+    page-layout: full
+   
 
 editor: visual
 
